crates/math-core/tests/snapshots/conversion_test__set_without_vertical_line.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\set{x}"
---
<math>
    <mo stretchy="false">{</mo>
    <mspace width="0.16666667em"/>
    <mi>x</mi>
    <mspace width="0.16666667em"/>
    <mo stretchy="false">}</mo>
</math>
