crates/math-core/tests/snapshots/conversion_test__sideset.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\sideset{^1_2}{_4^3}\\sum"
---
<math>
    <mmultiscripts>
        <mo movablelimits="false" lspace="0" rspace="0">∑</mo>
        <mn>4</mn>
        <mn>3</mn>
        <mprescripts/>
        <mn>2</mn>
        <mn>1</mn>
    </mmultiscripts>
</math>
