crates/math-core/tests/snapshots/conversion_test__sideset_prime_2.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\sideset'{}\\sum"
---
<math>
    <mmultiscripts>
        <mo movablelimits="false" lspace="0" rspace="0">∑</mo>
        <mrow></mrow>
        <mrow></mrow>
        <mprescripts/>
        <mrow></mrow>
        <mo>′</mo>
    </mmultiscripts>
</math>
