crates/math-core/tests/snapshots/conversion_test__sideset_prime_3.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\sideset{}'\\sum"
---
<math>
    <mmultiscripts>
        <mo movablelimits="false" lspace="0" rspace="0">∑</mo>
        <mrow></mrow>
        <mo>′</mo>
        <mprescripts/>
        <mrow></mrow>
        <mrow></mrow>
    </mmultiscripts>
</math>
